test/pending/script/errors.scala
#!/bin/sh
exec scala -nocompdaemon "$0"
!#

// test that error messages print nicely

<hello> </there>


